# specter

./: Cargo.toml  README.md  specter
exif/: Cargo.toml  README.md
exif/examples/: dump.rs
exif/src/: jpeg.rs  lib.rs
exif/tests/: integration_tests.rs
libmeta/: Cargo.toml  README.md  rustfmt.toml
libmeta/examples/: dump.rs  error_chain.rs
libmeta/src/: lib.rs  utils.rs
libmeta/src/container/: container.rs  mod.rs
libmeta/src/container/jpeg/: jpeg.rs  marker.rs  mod.rs  segment.rs  test_data.rs
libmeta/src/errors/: cast.rs  context.rs  data.rs  exif.rs  filetype.rs  jfif.rs  jpeg.rs  meta.rs  mod.rs  parse.rs
libmeta/src/formats/: exif.rs  jfif.rs  jpeg.rs  mod.rs
libmeta/src/formats/jpeg/: jpeg.rs  marker.rs  mod.rs  parser.rs  segment.rs
libmeta/src/meta/: exif.rs  jfif.rs  kind.rs  meta.rs  metadata.rs  mod.rs  slice.rs  stream.rs
libmeta/src/meta/exif/: endian.rs  entry.rs  exif.rs  field.rs  format.rs  ifd.rs  ifd_file.rs  mod.rs  orientation.rs  resolution.rs  tag.rs  tags.rs  test_data.rs
libmeta/src/meta/exif/tag/: contrast.rs  gain.rs  lens_spec.rs  mod.rs  rational.rs  resolution_unit.rs  saturation.rs  scene.rs  sharpness.rs  tag.rs  y_cb_cr_coefficients.rs
libmeta/src/meta/file/: file.rs
libmeta/src/meta/jfif/: density.rs  jfif.rs  mod.rs
libmeta/src/parsers/: jpeg.rs
libmeta/tests/: integration_tests.rs
src/: main.rs
