[package]
name = "libexif"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Exif implementation"
repository = "https://github.com/phR0ze/specter/libexif"
exclude = [
    "docs",
    "config",
    "examples",
    ".git",
    ".githooks",
    ".github",
    "tests",
    "benches",
    "target",
    ".vscode",
]

[dependencies]
nom = "7.1.3"
