[package]
name = "libmeta"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Metadata implementation for specter"
repository = "https://github.com/phR0ze/specter/libmeta"
exclude = [
    "docs",
    "config",
    "examples",
    ".git",
    ".githooks",
    ".github",
    "tests",
    "benches",
    "target",
    ".vscode",
]

[dependencies]
anyhow = "1.0.86"
nom = "7.1.3"
